--- a/app/src/main/res/layout/item_booked.xml
+++ b/app/src/main/res/layout/item_booked.xml
@@ -12,14 +12,16 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:background="@drawable/text_box"
+        android:layout_height="70dp">
 
         <TextView
             android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="25-05-2025"
-            android:padding="5dp"
+            android:textColor="@color/default_pink"
+            android:padding="10dp"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -41,6 +43,7 @@
             android:id="@+id/delete"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_marginEnd="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
