--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/horizontal_up"
@@ -42,7 +41,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/setting_text"
         android:background="@color/white"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="10dp"
         app:cardElevation="20dp"
         android:layout_marginHorizontal="10dp"
         app:cardCornerRadius="8dp"
@@ -61,18 +60,6 @@
                 />
 
             <TextView
-                android:id="@+id/person"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:backgroundTint="@color/default_blue"
-                android:background="@drawable/default_profile_pic"
-                app:layout_constraintEnd_toEndOf="@id/container"
-                app:layout_constraintTop_toTopOf="@id/container"
-                app:layout_constraintBottom_toBottomOf="@id/container"
-                android:layout_margin="20dp"
-                />
-
-            <TextView
                 android:id="@+id/name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -81,10 +68,22 @@
                 android:textColor="@color/default_pink"
                 android:textStyle="bold|italic"
                 android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="@id/container"
+                app:layout_constraintStart_toEndOf="@id/person"
                 app:layout_constraintTop_toTopOf="@id/container"
                 app:layout_constraintBottom_toBottomOf="@id/container"
                 android:layout_marginStart="10dp"/>
+
+            <TextView
+                android:id="@+id/person"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:backgroundTint="@color/default_blue"
+                android:background="@drawable/default_profile_pic"
+                app:layout_constraintStart_toStartOf="@id/container"
+                app:layout_constraintTop_toTopOf="@id/container"
+                app:layout_constraintBottom_toBottomOf="@id/container"
+                android:layout_margin="10dp"
+                />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
@@ -121,10 +120,10 @@
                 android:layout_height="40dp"
                 android:backgroundTint="@color/default_blue"
                 android:background="@drawable/logout_icon"
-                app:layout_constraintEnd_toEndOf="@id/container2"
+                app:layout_constraintStart_toStartOf="@id/container2"
                 app:layout_constraintTop_toTopOf="@id/container2"
                 app:layout_constraintBottom_toBottomOf="@id/container2"
-                android:layout_margin="20dp"
+                android:layout_margin="10dp"
                 />
 
             <TextView
@@ -136,7 +135,7 @@
                 android:textColor="@color/default_pink"
                 android:textStyle="bold|italic"
                 android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="@id/container2"
+                app:layout_constraintStart_toEndOf="@id/person2"
                 app:layout_constraintTop_toTopOf="@id/container2"
                 app:layout_constraintBottom_toBottomOf="@id/container2"
                 android:layout_marginStart="10dp"/>
