--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -10,12 +10,13 @@
         android:layout_width="wrap_content"
         android:layout_height="1dp"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.14" />
+        app:layout_constraintGuide_percent="0.10" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="102dp"
         android:layout_height="146dp"
+        android:importantForAccessibility="no"
         android:src="@drawable/clinic_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.20"
@@ -28,9 +29,9 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome Back !!"
+        android:text="@string/welcome_back"
         android:textColor="@color/default_pink"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,8 +41,8 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="To continue , Login Now"
-        android:textSize="10dp"
+        android:text="@string/to_continue_login_now"
+        android:textSize="12sp"
         android:textColor="#7D7D7D"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,9 +56,9 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="60dp"
         android:background="@drawable/text_box"
-        android:hint="E-mail"
+        android:hint="@string/e_mail"
         android:inputType="textEmailAddress"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:paddingHorizontal="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,13 +79,13 @@
         android:layout_height="wrap_content"
         android:layout_margin="17dp"
         android:background="@drawable/text_box"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword"
         android:paddingHorizontal="50dp"
         app:layout_constraintEnd_toEndOf="@+id/editText"
         app:layout_constraintStart_toStartOf="@+id/editText"
         app:layout_constraintTop_toBottomOf="@+id/editText"
-        android:textSize="20dp"
+        android:textSize="20sp"
         />
 
     <TextView
@@ -116,8 +117,8 @@
         android:layout_marginTop="58dp"
         android:layout_marginEnd="56dp"
         android:background="@drawable/login_button"
-        android:text="Login"
-        android:textSize="20dp"
+        android:text="@string/login"
+        android:textSize="20sp"
         app:backgroundTint="@color/default_blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -131,7 +132,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:text="@string/forget_password"
-        android:textSize="16dp"
+        android:textSize="16sp"
         android:textColor="#7D7D7D"
         app:layout_constraintTop_toBottomOf="@+id/editText2"
         app:layout_constraintEnd_toEndOf="@id/editText2"
@@ -163,15 +164,16 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/btnLogin"
         app:layout_constraintStart_toStartOf="@id/btnLogin"
+        app:layout_constraintEnd_toEndOf="@id/btnLogin"
         android:layout_marginTop="10dp"
-        android:layout_marginStart="70dp"
         android:text="@string/have_account"/>
     <TextView
         android:id="@+id/register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/have_account"
-        app:layout_constraintTop_toBottomOf="@id/btnLogin"
+        app:layout_constraintStart_toStartOf="@id/have_account"
+        app:layout_constraintEnd_toEndOf="@id/have_account"
+        app:layout_constraintTop_toBottomOf="@id/have_account"
         android:layout_marginTop="10dp"
         android:layout_marginStart="5dp"
         android:textColor="@color/default_pink"
