--- a/app/src/main/res/layout/item_booked.xml
+++ b/app/src/main/res/layout/item_booked.xml
@@ -4,7 +4,9 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_margin="8dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="8dp"
+    android:layout_marginHorizontal="15dp"
     android:id="@+id/card_slot"
     android:background="@drawable/text_box"
     app:cardCornerRadius="8dp"
@@ -21,7 +23,7 @@
             android:layout_height="wrap_content"
             tools:text="25-05-2025"
             android:textColor="@color/default_pink"
-            android:padding="10dp"
+            android:padding="12dp"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -34,7 +36,7 @@
             tools:text=": 10:00 AM"
             android:padding="5dp"
             android:textStyle="bold"
-            android:textSize="18sp"
+            android:textSize="14sp"
             app:layout_constraintStart_toEndOf="@id/date"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
