--- a/app/src/main/res/layout/fragment_calender.xml
+++ b/app/src/main/res/layout/fragment_calender.xml
@@ -5,6 +5,14 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/horizontalUp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.03"
+        />
+
     <ImageView
         android:id="@+id/arrowBack"
         android:layout_width="0dp"
@@ -15,18 +23,30 @@
         app:layout_constraintHeight_percent="0.03"
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/horizontalUp" />
+
+    <TextView
+        android:id="@+id/newUser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/pick_a_date"
+        android:textStyle="bold|italic"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toBottomOf="@id/arrowBack"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/arrowBack"
+        app:layout_constraintTop_toTopOf="@id/arrowBack" />
 
     <TextView
         android:id="@+id/tv_selected_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/text_box"
         android:paddingHorizontal="10dp"
         android:paddingVertical="9dp"
-        android:text="Selected Date: ---"
+        android:text="@string/selected_date"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,36 +68,36 @@
         android:id="@+id/rv_slots"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="30dp"
         app:layout_constraintTop_toBottomOf="@id/btn_open_date_picker"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/btn_confirm" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_confirm"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Confirm"
+        android:text="@string/confirm"
+        app:cornerRadius="10dp"
         android:layout_marginBottom="15dp"
         android:layout_marginHorizontal="20dp"
-        android:background="@drawable/text_box"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="30dp"
         app:backgroundTint="@color/default_blue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_cancel"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/text_box"
-        android:text="Cancel"
+        app:cornerRadius="10dp"
+        android:text="@string/cancel"
         android:layout_marginBottom="15dp"
         app:backgroundTint="@color/default_blue"
         app:layout_constraintBottom_toBottomOf="parent"
