--- a/app/src/main/res/layout/fragment_case_details.xml
+++ b/app/src/main/res/layout/fragment_case_details.xml
@@ -14,6 +14,20 @@
         app:layout_constraintGuide_percent="0.0356341" />
 
     <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/blue_bg"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/pink_bg"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
         android:id="@+id/arrow_back"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -28,21 +42,31 @@
         android:id="@+id/case_details"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Case Details"
-        android:textSize="20dp"
+        android:text="@string/case_details"
+        android:textSize="20sp"
+        android:fontFamily="@font/poppins_black"
         android:textColor="#343434"
         app:layout_constraintBottom_toBottomOf="@id/arrow_back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/arrow_back"
         app:layout_constraintTop_toTopOf="@id/arrow_back" />
+
+    <TextView
+        android:id="@+id/line"
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:background="@drawable/thin_line"
+        app:layout_constraintTop_toBottomOf="@id/case_details"
+        android:layout_marginHorizontal="30dp"/>
+
     <TextView
         android:id="@+id/patient_name_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Patient Name : "
-        android:textSize="18dp"
+        android:text="@string/patient_name"
+        android:textSize="18sp"
         android:textColor="#989898"
-        app:layout_constraintTop_toBottomOf="@id/case_details"
+        app:layout_constraintTop_toBottomOf="@id/line"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
@@ -52,10 +76,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="Sama Ahmed"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:textColor="@color/default_blue"
         android:maxLines="1"
-        app:layout_constraintTop_toBottomOf="@id/case_details"
+        app:layout_constraintTop_toBottomOf="@id/line"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="50dp"
         android:layout_marginTop="20dp"
@@ -64,8 +88,8 @@
         android:id="@+id/age_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Age : "
-        android:textSize="18dp"
+        android:text="@string/age"
+        android:textSize="18sp"
         android:textColor="#989898"
         app:layout_constraintTop_toBottomOf="@id/patient_name_label"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,7 +101,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="20"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:maxLines="1"
         android:textColor="@color/default_blue"
         app:layout_constraintTop_toBottomOf="@id/patient_name"
@@ -89,8 +113,8 @@
         android:id="@+id/phone_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Phone Number : "
-        android:textSize="18dp"
+        android:text="@string/phone_number"
+        android:textSize="18sp"
         android:textColor="#989898"
         app:layout_constraintTop_toBottomOf="@id/age_label"
         app:layout_constraintStart_toStartOf="parent"
@@ -102,7 +126,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="207867803474"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:maxLines="1"
         android:textColor="@color/default_blue"
         app:layout_constraintTop_toBottomOf="@id/age"
@@ -114,8 +138,8 @@
         android:id="@+id/date_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Email : "
-        android:textSize="18dp"
+        android:text="@string/email"
+        android:textSize="18sp"
         android:textColor="#989898"
         app:layout_constraintTop_toBottomOf="@id/phone_label"
         app:layout_constraintStart_toStartOf="parent"
@@ -127,7 +151,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="20.04.2021"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:maxLines="1"
         android:textColor="@color/default_blue"
         app:layout_constraintTop_toBottomOf="@id/phone"
@@ -139,8 +163,8 @@
         android:id="@+id/status_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Address : "
-        android:textSize="18dp"
+        android:text="@string/address"
+        android:textSize="18sp"
         android:textColor="#989898"
         app:layout_constraintTop_toBottomOf="@id/date_label"
         app:layout_constraintStart_toStartOf="parent"
@@ -152,7 +176,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="Cairo"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:maxLines="1"
         android:textColor="@color/default_blue"
         app:layout_constraintTop_toBottomOf="@id/email"
@@ -160,5 +184,7 @@
         android:layout_marginEnd="50dp"
         android:layout_marginTop="20dp"
         />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
