--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="default_blue">#426BAE</color>
     <color name="default_pink">#C53B84</color>
     <color name="pink">#EAA0C2</color>
+    <color name="purple">#A701C8</color>
 </resources>
