--- a/app/src/main/res/layout/fragment_all_cases.xml
+++ b/app/src/main/res/layout/fragment_all_cases.xml
@@ -29,12 +29,21 @@
         android:id="@+id/cases_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cases"
-        android:textSize="28dp"
+        android:text="@string/cases"
+        android:textSize="22sp"
+        android:fontFamily="@font/poppins_black"
         app:layout_constraintBottom_toBottomOf="@id/arrow_back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/arrow_back"
         app:layout_constraintTop_toTopOf="@id/arrow_back" />
+
+    <TextView
+        android:id="@+id/line"
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:background="@drawable/thin_line"
+        app:layout_constraintTop_toBottomOf="@id/cases_text"
+        android:layout_marginHorizontal="30dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/casesRecycler"
