--- a/app/src/main/res/layout/fragment_booked_appointments.xml
+++ b/app/src/main/res/layout/fragment_booked_appointments.xml
@@ -37,13 +37,22 @@
         app:layout_constraintStart_toStartOf="@+id/arrowBack"
         app:layout_constraintTop_toTopOf="@id/arrowBack" />
 
+    <TextView
+        android:id="@+id/line"
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:background="@drawable/thin_line"
+        app:layout_constraintTop_toBottomOf="@id/newUser"
+        android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="30dp"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/booked_slots"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         tools:listitem="@layout/item_booked"
         android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@id/newUser"
+        app:layout_constraintTop_toBottomOf="@id/line"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
