--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -13,6 +13,20 @@
         app:layout_constraintGuide_percent="0.10" />
 
     <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/blue_bg"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/pink_bg"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
         android:id="@+id/imageView"
         android:layout_width="102dp"
         android:layout_height="146dp"
@@ -122,21 +136,8 @@
         app:backgroundTint="@color/default_blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/forget"
+        app:layout_constraintTop_toBottomOf="@+id/remember_me"
         app:layout_constraintWidth_percent="0.9"
-        />
-
-    <TextView
-        android:id="@+id/forget"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="@string/forget_password"
-        android:textSize="16sp"
-        android:textColor="#7D7D7D"
-        app:layout_constraintTop_toBottomOf="@+id/editText2"
-        app:layout_constraintEnd_toEndOf="@id/editText2"
-        android:layout_marginEnd="10dp"
         />
 
     <TextView
