--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -14,6 +14,20 @@
         />
 
     <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/blue_bg"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/pink_bg"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
         android:id="@+id/arrow_back"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -29,118 +43,217 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/setting"
-        android:textSize="28dp"
+        android:textSize="22sp"
+        android:textStyle="bold|italic"
+        android:fontFamily="@font/poppins_black"
         app:layout_constraintBottom_toBottomOf="@id/arrow_back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/arrow_back"
         app:layout_constraintTop_toTopOf="@id/arrow_back" />
+    
+    <TextView
+        android:id="@+id/profile_icon"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/profile"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="30dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/setting_text"/>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/profile"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/my_profile"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/my_profile"
+        android:textSize="15sp"
+        android:fontFamily="@font/poppins_light"
+        android:textStyle="italic"
+        android:textColor="@color/default_blue"
+        app:layout_constraintStart_toEndOf="@id/profile_icon"
         app:layout_constraintTop_toBottomOf="@id/setting_text"
-        android:background="@color/white"
-        android:layout_marginTop="10dp"
-        app:cardElevation="20dp"
-        android:layout_marginHorizontal="10dp"
-        app:cardCornerRadius="8dp"
-        android:layout_marginBottom="10dp">
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="13dp"/>
 
-            <TextView
-                android:id="@+id/container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/call_item"
-                android:layout_marginHorizontal="20dp"
-                app:layout_constraintTop_toTopOf="parent"
-                />
-
-            <TextView
-                android:id="@+id/name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:text="My Profile"
-                android:textColor="@color/default_pink"
-                android:textStyle="bold|italic"
-                android:textSize="20sp"
-                app:layout_constraintStart_toEndOf="@id/person"
-                app:layout_constraintTop_toTopOf="@id/container"
-                app:layout_constraintBottom_toBottomOf="@id/container"
-                android:layout_marginStart="10dp"/>
-
-            <TextView
-                android:id="@+id/person"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:backgroundTint="@color/default_blue"
-                android:background="@drawable/default_profile_pic"
-                app:layout_constraintStart_toStartOf="@id/container"
-                app:layout_constraintTop_toTopOf="@id/container"
-                app:layout_constraintBottom_toBottomOf="@id/container"
-                android:layout_margin="10dp"
-                />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
-
-
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/logout"
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/profile"
-        android:background="@color/white"
-        android:layout_marginTop="8dp"
-        app:cardElevation="20dp"
-        android:layout_marginHorizontal="10dp"
-        app:cardCornerRadius="8dp"
-        android:layout_marginBottom="10dp">
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/my_profile"
+        app:layout_constraintBottom_toBottomOf="@id/my_profile"
+        android:background="@drawable/arrow_right"
+        android:layout_marginEnd="20dp"/>
+    
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:background="@drawable/thin_line"
+        app:layout_constraintTop_toBottomOf="@id/my_profile"
+        android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="10dp"/>
 
-            <TextView
-                android:id="@+id/container2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/call_item"
-                android:layout_marginHorizontal="20dp"
-                app:layout_constraintTop_toTopOf="parent"
-                />
+    <TextView
+        android:id="@+id/logout_icon"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/logout_icon"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="30dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/my_profile"/>
 
-            <TextView
-                android:id="@+id/person2"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:backgroundTint="@color/default_blue"
-                android:background="@drawable/logout_icon"
-                app:layout_constraintStart_toStartOf="@id/container2"
-                app:layout_constraintTop_toTopOf="@id/container2"
-                app:layout_constraintBottom_toBottomOf="@id/container2"
-                android:layout_margin="10dp"
-                />
+    <TextView
+        android:id="@+id/logout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/logout"
+        android:textSize="15sp"
+        android:textStyle="italic"
+        android:fontFamily="@font/poppins_light"
+        android:textColor="@color/default_blue"
+        app:layout_constraintStart_toEndOf="@id/profile_icon"
+        app:layout_constraintTop_toBottomOf="@id/my_profile"
+        android:layout_marginTop="35dp"
+        android:layout_marginStart="13dp"/>
 
-            <TextView
-                android:id="@+id/name2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:text="Logout"
-                android:textColor="@color/default_pink"
-                android:textStyle="bold|italic"
-                android:textSize="20sp"
-                app:layout_constraintStart_toEndOf="@id/person2"
-                app:layout_constraintTop_toTopOf="@id/container2"
-                app:layout_constraintBottom_toBottomOf="@id/container2"
-                android:layout_marginStart="10dp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/logout"
+        app:layout_constraintBottom_toBottomOf="@id/logout"
+        android:background="@drawable/arrow_right"
+        android:layout_marginEnd="20dp"/>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:background="@drawable/thin_line"
+        app:layout_constraintTop_toBottomOf="@id/logout"
+        android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="10dp"/>
+
+    <TextView
+        android:id="@+id/change_password_icon"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/change_password"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="30dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/logout"/>
+
+    <TextView
+        android:id="@+id/change_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/change_password"
+        android:textSize="15sp"
+        android:textStyle="italic"
+        android:fontFamily="@font/poppins_light"
+        android:textColor="@color/default_blue"
+        app:layout_constraintStart_toEndOf="@id/change_password_icon"
+        app:layout_constraintTop_toBottomOf="@id/logout"
+        android:layout_marginTop="35dp"
+        android:layout_marginStart="13dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/change_password"
+        app:layout_constraintBottom_toBottomOf="@id/change_password"
+        android:background="@drawable/arrow_right"
+        android:layout_marginEnd="20dp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:background="@drawable/thin_line"
+        app:layout_constraintTop_toBottomOf="@id/change_password"
+        android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="10dp"/>
+
+    <TextView
+        android:id="@+id/about_us_icon"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/about_us"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="30dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/change_password"/>
+
+    <TextView
+        android:id="@+id/about_us"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/about_us"
+        android:textSize="15sp"
+        android:textStyle="italic"
+        android:fontFamily="@font/poppins_light"
+        android:textColor="@color/default_blue"
+        app:layout_constraintStart_toEndOf="@id/change_password_icon"
+        app:layout_constraintTop_toBottomOf="@id/change_password"
+        android:layout_marginTop="35dp"
+        android:layout_marginStart="13dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/about_us"
+        app:layout_constraintBottom_toBottomOf="@id/about_us"
+        android:background="@drawable/arrow_right"
+        android:layout_marginEnd="20dp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:background="@drawable/thin_line"
+        app:layout_constraintTop_toBottomOf="@id/about_us"
+        android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="10dp"/>
+
+    <TextView
+        android:id="@+id/language_icon"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/languages"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="30dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/about_us"/>
+
+    <TextView
+        android:id="@+id/language"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/language"
+        android:textSize="15sp"
+        android:textStyle="italic"
+        android:textColor="@color/default_blue"
+        android:fontFamily="@font/poppins_light"
+        app:layout_constraintStart_toEndOf="@id/change_password_icon"
+        app:layout_constraintTop_toBottomOf="@id/about_us"
+        android:layout_marginTop="35dp"
+        android:layout_marginStart="13dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/language"
+        app:layout_constraintBottom_toBottomOf="@id/language"
+        android:background="@drawable/arrow_right"
+        android:layout_marginEnd="20dp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:background="@drawable/thin_line"
+        app:layout_constraintTop_toBottomOf="@id/language"
+        android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="10dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
