--- a/app/src/main/res/layout/fragment_doctor_home.xml
+++ b/app/src/main/res/layout/fragment_doctor_home.xml
@@ -42,6 +42,7 @@
         />
 
     <ImageView
+        android:id="@+id/settings"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:src="@drawable/setting"
