--- a/app/src/main/res/layout/fragment_doctor_bookings.xml
+++ b/app/src/main/res/layout/fragment_doctor_bookings.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -28,7 +29,8 @@
         android:id="@+id/newUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/your_appointments"
+        android:text="@string/all_bookings"
+        android:fontFamily="@font/poppins_black"
         android:textStyle="bold|italic"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="@id/arrowBack"
