My Profile Done

--- a/app/src/main/res/layout/feagment_my_profile.xml
+++ b/app/src/main/res/layout/feagment_my_profile.xml
@@ -45,40 +45,52 @@
         android:background="@drawable/profile_container"
         app:circularflow_defaultRadius="50dp"
         app:layout_constraintWidth_percent="0.9"
-        app:layout_constraintHeight_percent="0.80"
+        app:layout_constraintHeight_percent="0.70"
         app:layout_constraintTop_toBottomOf="@id/profile"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         app:layout_constraintBottom_toBottomOf="parent"/>
-    <TextView
-        android:id="@+id/pic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/profile_pic"
-        app:backgroundTint="@color/pink"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/pic_container"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        app:cardCornerRadius="90dp"
+        app:cardElevation="10dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="@id/container"
         app:layout_constraintEnd_toEndOf="@id/container"
-        app:layout_constraintTop_toBottomOf="@id/profile"
-        />
+        app:layout_constraintTop_toBottomOf="@id/profile">
+
+        <ImageView
+            android:id="@+id/pic"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:background="@drawable/name"
+            android:backgroundTint="@color/default_pink"
+            android:scaleType="fitXY"
+            />
+
+    </androidx.cardview.widget.CardView>
     <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="Sama Ahmed"
         android:fontFamily="@font/rubik_variable_font_wight"
-        app:layout_constraintTop_toBottomOf="@id/pic"
-        app:layout_constraintStart_toStartOf="@id/pic"
-        app:layout_constraintEnd_toEndOf="@id/pic"
+        app:layout_constraintTop_toBottomOf="@id/pic_container"
+        app:layout_constraintStart_toStartOf="@id/pic_container"
+        app:layout_constraintEnd_toEndOf="@id/pic_container"
         android:textSize="15sp"
         android:textStyle="bold"
+        android:layout_marginTop="10dp"
         android:textColor="@color/default_blue"/>
     <TextView
         android:id="@+id/specialization"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@drawable/role"
-        app:layout_constraintTop_toBottomOf="@id/pic"
+        app:layout_constraintTop_toBottomOf="@id/pic_container"
         app:layout_constraintStart_toStartOf="@id/container"
         android:layout_marginStart="30dp"
         android:layout_marginTop="40dp"
@@ -95,32 +107,11 @@
         android:textSize="15sp"
         />
     <TextView
-        android:id="@+id/gender"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:background="@drawable/profile_gender"
-        app:layout_constraintTop_toBottomOf="@id/specialization"
-        app:layout_constraintStart_toStartOf="@id/container"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="20dp"
-        />
-    <TextView
-        android:id="@+id/genderText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="Male"
-        app:layout_constraintStart_toEndOf="@id/gender"
-        app:layout_constraintTop_toTopOf="@id/gender"
-        app:layout_constraintBottom_toBottomOf="@id/gender"
-        android:layout_marginStart="20dp"
-        android:textSize="15sp"
-        />
-    <TextView
         android:id="@+id/agee"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@drawable/profile_date"
-        app:layout_constraintTop_toBottomOf="@id/gender"
+        app:layout_constraintTop_toBottomOf="@id/specialization"
         app:layout_constraintStart_toStartOf="@id/container"
         android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
