--- a/app/src/main/res/layout/fragment_doctor_bookings.xml
+++ b/app/src/main/res/layout/fragment_doctor_bookings.xml
@@ -14,11 +14,13 @@
         app:layout_constraintGuide_percent="0.03"
         />
 
-    <ImageView
+    <ImageButton
         android:id="@+id/arrowBack"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:importantForAccessibility="no"
         android:src="@drawable/baseline_arrow_back_24"
+        android:background="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintWidth_percent="0.09"
         app:layout_constraintHeight_percent="0.03"
@@ -47,13 +49,38 @@
         android:layout_marginTop="10dp"
         android:layout_marginHorizontal="30dp"/>
 
+    <TextView
+        android:id="@+id/calender"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="@drawable/baseline_edit_calendar_24"
+        app:layout_constraintTop_toBottomOf="@id/line"
+        android:layout_marginVertical="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="20dp"/>
+
+    <TextView
+        android:id="@+id/today"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/bookings_of_today"
+        android:textSize="16sp"
+        android:textColor="@color/default_pink"
+        android:textStyle="italic"
+        android:fontFamily="@font/poppins_light"
+        app:layout_constraintTop_toTopOf="@id/calender"
+        app:layout_constraintBottom_toBottomOf="@id/calender"
+        android:layout_marginVertical="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="20dp"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/booked_slots"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         tools:listitem="@layout/item_booked_doctor"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@id/line"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/calender"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
