--- a/app/src/main/res/layout/fragment_case_details.xml
+++ b/app/src/main/res/layout/fragment_case_details.xml
@@ -59,131 +59,182 @@
         app:layout_constraintTop_toBottomOf="@id/case_details"
         android:layout_marginHorizontal="30dp"/>
 
-    <TextView
-        android:id="@+id/patient_name_label"
-        android:layout_width="wrap_content"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/name_card"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/patient_name"
-        android:textSize="18sp"
-        android:textColor="#989898"
         app:layout_constraintTop_toBottomOf="@id/line"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="20dp"
-        />
-    <TextView
-        android:id="@+id/patient_name"
-        android:layout_width="wrap_content"
+        android:layout_margin="16dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp">
+
+            <TextView
+            android:id="@+id/patient_name_label"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/profile"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="10dp"
+            android:layout_marginVertical="8dp"
+            />
+
+            <TextView
+                android:id="@+id/patient_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="Sama Ahmed"
+                android:textSize="18sp"
+                android:textColor="@color/default_blue"
+                android:maxLines="1"
+                app:layout_constraintTop_toTopOf="@id/patient_name_label"
+                app:layout_constraintBottom_toBottomOf="@id/patient_name_label"
+                app:layout_constraintStart_toEndOf="@id/patient_name_label"
+                android:layout_marginStart="30dp"
+                />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="Sama Ahmed"
-        android:textSize="18sp"
-        android:textColor="@color/default_blue"
-        android:maxLines="1"
-        app:layout_constraintTop_toBottomOf="@id/line"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="50dp"
-        android:layout_marginTop="20dp"
-        />
-    <TextView
-        android:id="@+id/age_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/age"
-        android:textSize="18sp"
-        android:textColor="#989898"
-        app:layout_constraintTop_toBottomOf="@id/patient_name_label"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="20dp"
-        />
-    <TextView
-        android:id="@+id/age"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="20"
-        android:textSize="18sp"
-        android:maxLines="1"
-        android:textColor="@color/default_blue"
-        app:layout_constraintTop_toBottomOf="@id/patient_name"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="50dp"
-        android:layout_marginTop="20dp"
-        />
-    <TextView
-        android:id="@+id/phone_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/phone_number"
-        android:textSize="18sp"
-        android:textColor="#989898"
-        app:layout_constraintTop_toBottomOf="@id/age_label"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="20dp"
-        />
-    <TextView
-        android:id="@+id/phone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="207867803474"
-        android:textSize="18sp"
-        android:maxLines="1"
-        android:textColor="@color/default_blue"
-        app:layout_constraintTop_toBottomOf="@id/age"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="30dp"
-        android:layout_marginTop="20dp"
-        />
-    <TextView
-        android:id="@+id/date_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/email"
-        android:textSize="18sp"
-        android:textColor="#989898"
-        app:layout_constraintTop_toBottomOf="@id/phone_label"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="20dp"
-        />
-    <TextView
-        android:id="@+id/email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="20.04.2021"
-        android:textSize="18sp"
-        android:maxLines="1"
-        android:textColor="@color/default_blue"
-        app:layout_constraintTop_toBottomOf="@id/phone"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="30dp"
-        android:layout_marginTop="20dp"
-        />
-    <TextView
-        android:id="@+id/status_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/address"
-        android:textSize="18sp"
-        android:textColor="#989898"
-        app:layout_constraintTop_toBottomOf="@id/date_label"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="20dp"
-        />
-    <TextView
-        android:id="@+id/address"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="Cairo"
-        android:textSize="18sp"
-        android:maxLines="1"
-        android:textColor="@color/default_blue"
-        app:layout_constraintTop_toBottomOf="@id/email"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="50dp"
-        android:layout_marginTop="20dp"
-        />
+        app:layout_constraintTop_toBottomOf="@id/name_card"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginVertical="25dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp">
+
+            <TextView
+                android:id="@+id/age_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/age"
+                android:textSize="18sp"
+                android:textColor="#989898"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                />
+            <EditText
+                android:id="@+id/age"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:text="20"
+                android:textSize="18sp"
+                android:clickable="false"
+                android:maxLines="1"
+                android:gravity="center"
+                android:focusableInTouchMode="false"
+                android:background="@drawable/text_box"
+                android:textColor="@color/default_pink"
+                app:layout_constraintTop_toBottomOf="@id/age_label"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="10dp"
+                />
+
+            <TextView
+                android:id="@+id/phone_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/phone_number"
+                android:textSize="18sp"
+                android:textColor="#989898"
+                app:layout_constraintTop_toBottomOf="@id/age"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                />
+            <EditText
+                android:id="@+id/phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:text="207867803474"
+                android:textSize="18sp"
+                android:background="@drawable/text_box"
+                android:clickable="false"
+                android:maxLines="1"
+                android:gravity="center"
+                android:focusableInTouchMode="false"
+                android:textColor="@color/default_pink"
+                app:layout_constraintTop_toBottomOf="@id/phone_label"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="10dp"
+                />
+
+            <TextView
+                android:id="@+id/date_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/email"
+                android:textSize="18sp"
+                android:textColor="#989898"
+                app:layout_constraintTop_toBottomOf="@id/phone"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                />
+            <EditText
+                android:id="@+id/email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:text="20.04.2021"
+                android:background="@drawable/text_box"
+                android:textSize="18sp"
+                android:maxLines="1"
+                android:clickable="false"
+                android:gravity="center"
+                android:textColor="@color/default_pink"
+                android:focusableInTouchMode="false"
+                app:layout_constraintTop_toBottomOf="@id/date_label"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="10dp"
+                />
+
+            <TextView
+                android:id="@+id/status_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/address"
+                android:textSize="18sp"
+                android:textColor="#989898"
+                app:layout_constraintTop_toBottomOf="@id/email"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                />
+            <EditText
+                android:id="@+id/address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:text="Cairo"
+                android:textSize="18sp"
+                android:maxLines="1"
+                android:clickable="false"
+                android:background="@drawable/text_box"
+                android:textColor="@color/default_pink"
+                app:layout_constraintTop_toBottomOf="@id/status_label"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:focusableInTouchMode="false"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="20dp"
+                />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
 
 
