--- a/app/src/main/res/layout/fragment_patient_home_2.xml
+++ b/app/src/main/res/layout/fragment_patient_home_2.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tool="http://schemas.android.com/tools">
 
@@ -13,21 +14,20 @@
         android:layout_marginHorizontal="10dp"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <ImageButton
-        android:id="@+id/menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <TextView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         app:layout_constraintStart_toStartOf="@id/welcome"
         app:layout_constraintTop_toTopOf="@id/welcome"
-        android:src="@drawable/menu_bar"
-        android:background="#80C8BFE7"
+        android:background="@drawable/clinic_logo"
         android:layout_marginStart="10dp"
         android:layout_marginTop="15dp"/>
 
-    <ImageView
+    <ImageButton
+        android:id="@+id/menu"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:src="@drawable/clinic_logo"
+        android:src="@drawable/menu_bar"
         app:layout_constraintEnd_toEndOf="@id/welcome"
         app:layout_constraintTop_toTopOf="@id/welcome"
         android:layout_marginEnd="20dp"
@@ -58,6 +58,28 @@
         app:layout_constraintStart_toEndOf="@id/hi"
         app:layout_constraintTop_toBottomOf="@id/menu"
         android:layout_marginTop="35dp"/>
+
+    <TextView
+        android:id="@+id/location"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/new_user_location"
+        app:layout_constraintEnd_toEndOf="@id/welcome"
+        app:layout_constraintTop_toTopOf="@id/type"
+        app:layout_constraintBottom_toBottomOf="@id/type"
+        android:layout_marginEnd="20dp"/>
+
+    <TextView
+        android:id="@+id/WhatsApp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:background="@drawable/whatsapp_logo"
+        app:layout_constraintEnd_toStartOf="@id/location"
+        app:layout_constraintTop_toTopOf="@id/location"
+        app:layout_constraintBottom_toBottomOf="@id/location"
+        android:layout_marginEnd="10dp"
+        app:backgroundTint="@color/default_blue"/>
+
 
     <ScrollView
         android:layout_width="match_parent"
@@ -172,7 +194,5 @@
 
         </LinearLayout>
     </ScrollView>
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
