--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -10,8 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.03"
-        />
+        app:layout_constraintGuide_percent="0.03" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -35,8 +34,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintWidth_percent="0.11"
         app:layout_constraintHeight_percent="0.04"
-        app:layout_constraintTop_toBottomOf="@+id/horizontal_up"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/horizontal_up" />
 
     <TextView
         android:id="@+id/setting_text"
@@ -93,25 +91,25 @@
         android:layout_marginHorizontal="10dp"/>
 
     <TextView
-        android:id="@+id/logout_icon"
+        android:id="@+id/change_password_icon"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:background="@drawable/logout_icon"
+        android:background="@drawable/about_us"
         android:layout_marginTop="30dp"
         android:layout_marginStart="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/my_profile"/>
 
     <TextView
-        android:id="@+id/logout"
+        android:id="@+id/about_doctor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/logout"
+        android:text="About Doctor"
         android:textSize="15sp"
         android:textStyle="italic"
         android:fontFamily="@font/poppins_light"
         android:textColor="@color/default_blue"
-        app:layout_constraintStart_toEndOf="@id/profile_icon"
+        app:layout_constraintStart_toEndOf="@id/change_password_icon"
         app:layout_constraintTop_toBottomOf="@id/my_profile"
         android:layout_marginTop="35dp"
         android:layout_marginStart="13dp"/>
@@ -120,8 +118,8 @@
         android:layout_width="10dp"
         android:layout_height="10dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/logout"
-        app:layout_constraintBottom_toBottomOf="@id/logout"
+        app:layout_constraintTop_toTopOf="@id/about_doctor"
+        app:layout_constraintBottom_toBottomOf="@id/about_doctor"
         android:background="@drawable/arrow_right"
         android:layout_marginEnd="20dp"/>
 
@@ -129,48 +127,7 @@
         android:layout_width="match_parent"
         android:layout_height="4dp"
         android:background="@drawable/thin_line"
-        app:layout_constraintTop_toBottomOf="@id/logout"
-        android:layout_marginTop="10dp"
-        android:layout_marginHorizontal="10dp"/>
-
-    <TextView
-        android:id="@+id/change_password_icon"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:background="@drawable/change_password"
-        android:layout_marginTop="30dp"
-        android:layout_marginStart="30dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/logout"/>
-
-    <TextView
-        android:id="@+id/change_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/change_password"
-        android:textSize="15sp"
-        android:textStyle="italic"
-        android:fontFamily="@font/poppins_light"
-        android:textColor="@color/default_blue"
-        app:layout_constraintStart_toEndOf="@id/change_password_icon"
-        app:layout_constraintTop_toBottomOf="@id/logout"
-        android:layout_marginTop="35dp"
-        android:layout_marginStart="13dp"/>
-
-    <TextView
-        android:layout_width="10dp"
-        android:layout_height="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/change_password"
-        app:layout_constraintBottom_toBottomOf="@id/change_password"
-        android:background="@drawable/arrow_right"
-        android:layout_marginEnd="20dp"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="4dp"
-        android:background="@drawable/thin_line"
-        app:layout_constraintTop_toBottomOf="@id/change_password"
+        app:layout_constraintTop_toBottomOf="@id/about_doctor"
         android:layout_marginTop="10dp"
         android:layout_marginHorizontal="10dp"/>
 
@@ -178,11 +135,11 @@
         android:id="@+id/about_us_icon"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:background="@drawable/about_us"
+        android:background="@drawable/clinic_logo"
         android:layout_marginTop="30dp"
         android:layout_marginStart="30dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/change_password"/>
+        app:layout_constraintTop_toBottomOf="@id/about_doctor"/>
 
     <TextView
         android:id="@+id/about_us"
@@ -194,7 +151,7 @@
         android:fontFamily="@font/poppins_light"
         android:textColor="@color/default_blue"
         app:layout_constraintStart_toEndOf="@id/change_password_icon"
-        app:layout_constraintTop_toBottomOf="@id/change_password"
+        app:layout_constraintTop_toBottomOf="@id/about_doctor"
         android:layout_marginTop="35dp"
         android:layout_marginStart="13dp"/>
 
@@ -219,17 +176,17 @@
         android:id="@+id/language_icon"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:background="@drawable/languages"
+        android:background="@drawable/logout_icon"
         android:layout_marginTop="30dp"
         android:layout_marginStart="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/about_us"/>
 
     <TextView
-        android:id="@+id/language"
+        android:id="@+id/logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/language"
+        android:text="@string/logout"
         android:textSize="15sp"
         android:textStyle="italic"
         android:textColor="@color/default_blue"
@@ -243,8 +200,8 @@
         android:layout_width="10dp"
         android:layout_height="10dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/language"
-        app:layout_constraintBottom_toBottomOf="@id/language"
+        app:layout_constraintTop_toTopOf="@id/logout"
+        app:layout_constraintBottom_toBottomOf="@id/logout"
         android:background="@drawable/arrow_right"
         android:layout_marginEnd="20dp"/>
 
@@ -252,7 +209,7 @@
         android:layout_width="match_parent"
         android:layout_height="4dp"
         android:background="@drawable/thin_line"
-        app:layout_constraintTop_toBottomOf="@id/language"
+        app:layout_constraintTop_toBottomOf="@id/logout"
         android:layout_marginTop="10dp"
         android:layout_marginHorizontal="10dp"/>
 
